<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_One.ForgotActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dine"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/skyblue">

        <TextView
            android:id="@+id/back"
            android:text="@string/app_forgotpswd"
            android:textSize="14dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/app_logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_forgotpswd_status"
        android:layout_gravity="left"
        android:gravity="left"
        android:textStyle="bold"
        android:textColor="#F7020000"
        android:layout_marginLeft="15sp"
        android:textSize="18sp"
       />
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/app_forgot_msg"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15sp"
        android:textColor="#F7020000"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="left"
        android:gravity="left"
        android:textSize="20dp"
        android:text="@string/app_mobile_number"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="45dp"
        android:textColor="@color/black"
        />
    <!--<View-->
        <!--android:layout_width="350dp"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/skyblue"-->
        <!--android:layout_marginLeft="15dp"/>-->

    <Button
        android:id="@+id/getcode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_get_code"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_margin="60dp"

        android:textColor="@color/colorWhite"
        />

</LinearLayout>