<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:src="@drawable/saptapadi_name_blue"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_create_an_account"
            android:layout_gravity="left"
            android:textColor="@color/colorblack"
            android:textSize="18sp"
            android:layout_margin="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="15dp"
            android:hint="@string/app_mobile_number"
            android:layout_margin="3dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/app_emailid"
            android:textSize="15dp"
            android:layout_margin="3dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Address"
            android:textSize="15dp"
            android:layout_margin="3dp"
            />

        <com.maksim88.passwordedittext.PasswordEditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textSize="15dp"
        android:hint="Password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"
            android:hint="@string/app_cnfm_pswd"
            android:textSize="15dp"
            android:layout_margin="3dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="3dp"
            android:layout_gravity="end"
            android:gravity="end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_state"
            android:layout_gravity="start"
            android:textColor="@color/colorblack"
            android:textSize="15sp"
            android:layout_margin="3dp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </LinearLayout>
        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/brown"/>
        <LinearLayout
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_city"
            android:layout_gravity="left"
            android:textColor="@color/colorblack"
            android:textSize="15sp"
            android:layout_margin="5dp"
            />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"/>
        </LinearLayout>
        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/brown"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/app_create_account"
            android:background="@drawable/button"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

</RelativeLayout>